KBmenu/force-app/main/default/objects/project__c/project__c.object-meta.xml
<CustomObject>
    <description>Automai Projects</description>
    <label>project</label>
    <nameField>
        <label>project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>