KBmenu/force-app/main/default/objects/project__c/fields/AI_Support_Engineer__c.field-meta.xml
<CustomField>
    <fullName>AI_Support_Engineer__c</fullName>
    <inlineHelpText>Automai Project Manager</inlineHelpText>
    <label>Automai PM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kevin B</fullName>
            </value>
            <value>
                <fullName>Anh A</fullName>
            </value>
            <value>
                <fullName>Ben H</fullName>
            </value>
            <value>
                <fullName>Brian M</fullName>
            </value>
            <value>
                <fullName>Patrick H</fullName>
            </value>
            <value>
                <fullName>SamB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>