KBmenu/force-app/main/default/objects/project__c/fields/Allocated_hours__c.field-meta.xml
<CustomField>
    <fullName>Allocated_hours__c</fullName>
    <description>This can be ordered hours or onboarding hours</description>
    <label>Allocated hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>