KBmenu/force-app/main/default/objects/project__c/fields/Automation_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Automation_Requirement__c</fullName>
    <label>Automation Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>