KBmenu/force-app/main/default/objects/project__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <defaultValue>today() + 90</defaultValue>
    <label>End Date</label>
    <type>Date</type>
</CustomField>