KBmenu/force-app/main/default/objects/project__c/fields/Final_Step__c.field-meta.xml
<CustomField>
    <fullName>Final_Step__c</fullName>
    <label>Final Step?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>