KBmenu/force-app/main/default/objects/project__c/fields/First_Step__c.field-meta.xml
<CustomField>
    <fullName>First_Step__c</fullName>
    <label>First Step</label>
    <type>TextArea</type>
</CustomField>