KBmenu/force-app/main/default/objects/project__c/fields/Importance_of_First_Step__c.field-meta.xml
<CustomField>
    <fullName>Importance_of_First_Step__c</fullName>
    <label>Importance of First Step</label>
    <length>100</length>
    <type>Text</type>
</CustomField>