KBmenu/force-app/main/default/objects/project__c/fields/importance_of_next_step__c.field-meta.xml
<CustomField>
    <fullName>importance_of_next_step__c</fullName>
    <label>importance of next step</label>
    <length>100</length>
    <type>Text</type>
</CustomField>