KBmenu/force-app/main/default/objects/project__c/fields/Importance_of_the_process__c.field-meta.xml
<CustomField>
    <fullName>Importance_of_the_process__c</fullName>
    <label>Importance of the process?</label>
    <type>TextArea</type>
</CustomField>