KBmenu/force-app/main/default/objects/project__c/fields/Multiple_Screens_Involved__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Screens_Involved__c</fullName>
    <label>Multiple Screens Involved?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 screen</fullName>
            </value>
            <value>
                <fullName>2 screens</fullName>
            </value>
            <value>
                <fullName>3 or more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>