KBmenu/force-app/main/default/objects/project__c/fields/Number_of_Software_Applications_Involved__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Software_Applications_Involved__c</fullName>
    <label>Number of Software Applications Involved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>