KBmenu/force-app/main/default/objects/project__c/fields/Planner_link__c.field-meta.xml
<CustomField>
    <fullName>Planner_link__c</fullName>
    <description>Link to Microsoft Project Plan</description>
    <inlineHelpText>Link to Microsoft Project Plan</inlineHelpText>
    <label>Planner link</label>
    <type>Url</type>
</CustomField>