KBmenu/force-app/main/default/objects/project__c/fields/RemainingHoursAuto__c.field-meta.xml
<CustomField>
    <fullName>RemainingHoursAuto__c</fullName>
    <formula>Allocated_hours__c  - Total_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>