KBmenu/force-app/main/default/objects/project__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <description>Hours spent on this project so far</description>
    <inlineHelpText>up to date hours spent on this project</inlineHelpText>
    <label>Total Hours</label>
    <summarizedField>Project_Ln__c.Hours__c</summarizedField>
    <summaryForeignKey>Project_Ln__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>