KBmenu/force-app/main/default/objects/project__c/fields/Value_of_Automation__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Automation__c</fullName>
    <label>Value of Automation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>