KBmenu/force-app/main/default/objects/project__c/fields/X3_types_of_automation_processes__c.field-meta.xml
<CustomField>
    <fullName>X3_types_of_automation_processes__c</fullName>
    <label>3 types of automation processes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Extraction</fullName>
            </value>
            <value>
                <fullName>Data Entry</fullName>
            </value>
            <value>
                <fullName>Data Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>