KBmenu/force-app/main/default/objects/project__c/listViews/All_Projects.listView-meta.xml
<ListView>
    <fullName>All_Projects</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>RemainingHoursAuto__c</columns>
    <columns>AI_Support_Engineer__c</columns>
    <columns>Contact__c</columns>
    <columns>End_Date__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>All Projects</label>
</ListView>